removed trigger for UI updates; implemented generic pin / unpin of entities; load constraint definitions from DB

--- a/modules/web/src/de/diedavids/cuba/entitypin/web/messages.properties
+++ b/modules/web/src/de/diedavids/cuba/entitypin/web/messages.properties
@@ -8,3 +8,5 @@ loginWindow.logoImage = branding/app-icon-login.png
 menu-config.application = Application
 menu-config.entitypin$Customer.browse = Customers
 menu-config.entitypin$Order.browse = Orders
+
+actions.Pin = Pin
